# scrape-historical-league-tables

./: pyproject.toml  scrape-league-tables.py
data/: fixtures.csv
