[tool.poetry]
name = "scrape-historical-league-tables"
version = "0.1.0"
description = ""
authors = ["petebrown <15838790+petebrown@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "scrape_historical_league_tables"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.8.0"
pandas = "^1.5.3"
webdriver-manager = "^3.8.5"
lxml = "^4.9.2"
html5lib = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
